ScalaCheck tests for FixedStructBuffer

--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 
     testCompile 'org.scalatest:scalatest_2.11:2.2.2'
     testCompile 'junit:junit:4.11'
+    testCompile 'org.scalacheck:scalacheck_2.11:1.11.6'
 }
 
 tasks.withType(ScalaCompile) {
