--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     testCompile 'org.scalatest:scalatest_2.11:2.2.2'
     testCompile 'junit:junit:4.11'
     testCompile 'org.scalacheck:scalacheck_2.11:1.11.6'
+    testCompile 'org.mockito:mockito-all:1.9.5'
 }
 
 tasks.withType(ScalaCompile) {
