--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,9 @@ signing {
     sign configurations.archives
 }
 
+def ossrhUsername = hasProperty('ossrhUsername') ? ossrhUsername : ''
+def ossrhPassword = hasProperty('ossrhPassword') ? ossrhPassword : ''
+
 uploadArchives {
     repositories {
         mavenDeployer {
