--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
     }
     dependencies {
         classpath 'org.scoverage:gradle-scoverage:0.6-SNAPSHOT'
+        classpath 'net.saliman:gradle-cobertura-plugin:2.0.0'
+        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.0.1'
     }
 }
 
@@ -12,6 +14,8 @@ apply plugin: 'scala'
 apply plugin: org.scoverage.ScoveragePlugin
 apply plugin: 'maven'
 apply plugin: 'signing'
+apply plugin: 'cobertura'
+apply plugin: 'com.github.kt3k.coveralls'
 
 targetCompatibility = 1.6
 
@@ -104,3 +108,5 @@ uploadArchives {
         }
     }
 }
+
+cobertura.coverageFormats = ['html', 'xml']
