--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
 language: java
-script: ./gradlew test
+script: ./gradlew cobertura coveralls
 install: /bin/true
-after_success:
-    - ./gradlew cobertura coveralls
